# sgpc-projeto

./: README.md  package-lock.json
.agents/: GEMINI.md
.agents/docs/: PADRONIZACAO_E_ARQUITETURA.md  PLANO_IMPLEMENTACAO_PERFIS_CHAVE.md  PLANO_IMPLEMENTACAO_RBAC.md
.agents/workflows/: prepare-pr.md  run-api.md  run-front.md  vercel-best-practices.md
.github/workflows/: ci-status-check.yml  dependencies-review.yml  format.yml  lint.yml  tests.yml
api/: .env.example  .gitignore  README.md  index.py  pyproject.toml  requirements.txt  scripts.md  vercel.json
api/app/: config.py
api/app/db/: database.py  prisma_client.py
api/app/models/: __init__.py
api/app/modules/autenticacao/: autenticacao_controller.py  autenticacao_schema.py  autenticacao_service.py
api/app/modules/chave/: chave_controller.py  chave_model.py  chave_router.py  chave_schema.py  chave_service.py
api/app/modules/condominio/: condominio_schema.py
api/app/modules/core/: auth.py  core_controller.py  core_exception.py  core_schema.py  core_service.py  exceptions.py  logger.py  router.py  security.py
api/app/modules/funcionario/: funcionario_controller.py  funcionario_model.py  funcionario_schema.py  funcionario_service.py
api/app/modules/morador/: morador_controller.py  morador_model.py  morador_router.py  morador_schema.py  morador_service.py
api/app/modules/unidade/: unidade_controller.py  unidade_schema.py  unidade_service.py
api/app/modules/users/: models.py  router.py  schemas.py
api/app/modules/usuario/: schemas.py  usuario_controller.py  usuario_model.py  usuario_schema.py  usuario_service.py
api/app/routers/: __init__.py  auth.py  dev.py  funcionario.py  morador.py  unidade.py
api/prisma/: schema.prisma  seed.py
api/prisma/migrations/20260330183658_init_db/: migration.sql
api/prisma/migrations/20260403011303_init_db_test/: migration.sql
api/prisma/migrations/20260405223546_add_condominio_id/: migration.sql
api/prisma/migrations/20260407004614_init_db/: migration.sql
api/tests/: conftest.py  test_auth_morador.py  test_chave_expirada.py  test_core.py  test_fluxo_funcionario.py  test_inspecao_chave.py  test_seguranca_hierarquia.py  test_soft_delete.py
front/: .env.example  README.md  app.json  package-lock.json  package.json  tsconfig.json
front/app/: _layout.tsx  convidar.tsx  detalhes_entrega.tsx  documentos.tsx  entrega_recebida.tsx  entrega_retirada.tsx  index.tsx  nova_entrega.tsx  todas_entregas.tsx
front/app/(auth)/: Register.tsx  _layout.tsx  login.tsx
front/app/Avisos/: avisos.tsx
front/app/Entregas/: Entregas.tsx  NovaEntrega.tsx  ResumoEntrega.tsx
front/app/Historico/: historico.tsx
front/app/Home/: Home.tsx
front/app/Perfil/: perfil.tsx
front/src/(auth)/login/: login.styles.ts  login.tsx
front/src/components/: .gitkeep  Agendamento.tsx  BottomNav.tsx  Header.tsx  Listado.tsx
front/src/screens/: .gitkeep  Tela_documentos.tsx
front/src/screens/Avisos/: avisos.styles.ts
front/src/screens/Convidar/: convidar.styles.ts
front/src/screens/Documentos/: Footer_padrao.ts  (+2 more)
front/src/services/: api.ts
front/src/theme/: colors.ts
front/src/types/: index.ts
(+9 files in other folders)
