[project]
name = "api"
version = "0.1.0"
description = ""
authors = [
    {name = "Israel de Souza",email = "israellimas@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.135.2,<0.136.0)",
    "uvicorn[standard] (>=0.42.0,<0.43.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "prisma (>=0.15.0,<0.16.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "PyJWT (>=2.10.1,<3.0.0)",
    "structlog (>=25.5.0,<26.0.0)",
    "axiom-py (>=0.10.0,<0.11.0)"
]

[tool.poetry]
package-mode = false

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = [
    "E501", # linha muito longa (controlada pelo formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "ruff (>=0.15.7,<0.16.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
